update java server spring

--- a/FinalProject/ApiGateway/src/main/resources/application.properties
+++ b/FinalProject/ApiGateway/src/main/resources/application.properties
@@ -8,6 +8,8 @@ logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator = INFO
 logging.level.org.springframework.cloud.gateway = TRACE
 
+spring.cloud.gateway.mvc.form-filter.enabled=true
+
 okta.oauth2.client-id=XWUXJQIGRdyoKdCWLUaCmiioBG3sWdJ4
 okta.oauth2.issuer=https://tld18dev.au.auth0.com/
 okta.oauth2.client-secret=8aXy9Q-eDLjdZDudr4x6VXzIawQrF38s1voDQUKjpDYeaVdoLgdSNFRLobGJfuM7
